--- a/src/gui/MainWindow.ui
+++ b/src/gui/MainWindow.ui
@@ -34,6 +34,8 @@
      <string>File</string>
     </property>
     <addaction name="fileOpenAction"/>
+    <addaction name="separator"/>
+    <addaction name="filePrintAction"/>
    </widget>
    <addaction name="fileMenu"/>
   </widget>
@@ -60,6 +62,14 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+O</string>
+   </property>
+  </action>
+  <action name="filePrintAction">
+   <property name="text">
+    <string>&amp;Print...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+P</string>
    </property>
   </action>
  </widget>
