--- a/src/gui/LaserDialog.ui
+++ b/src/gui/LaserDialog.ui
@@ -23,7 +23,7 @@
       <attribute name="title">
        <string>General</string>
       </attribute>
-      <widget class="QWidget" name="">
+      <widget class="QWidget" name="layoutWidget">
        <property name="geometry">
         <rect>
          <x>10</x>
@@ -140,7 +140,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QComboBox" name="comboBox">
+              <widget class="QComboBox" name="rasterDirection">
                <item>
                 <property name="text">
                  <string>Top-Down</string>
@@ -178,7 +178,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QComboBox" name="comboBox_2">
+              <widget class="QComboBox" name="rasterDithering">
                <item>
                 <property name="text">
                  <string>Default</string>
@@ -186,7 +186,37 @@
                </item>
                <item>
                 <property name="text">
+                 <string>Bayer</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
                  <string>Floyd-Steinberg</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Jarvis</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Burke</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Stucki</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Sierra2</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Sierra3</string>
                 </property>
                </item>
               </widget>
