--- a/src/gui/CtrlCut.ui
+++ b/src/gui/CtrlCut.ui
@@ -44,7 +44,14 @@
     <addaction name="separator"/>
     <addaction name="filePrintAction"/>
    </widget>
+   <widget class="QMenu" name="menuTools">
+    <property name="title">
+     <string>Tools</string>
+    </property>
+    <addaction name="toolsMoveToOriginAction"/>
+   </widget>
    <addaction name="fileMenu"/>
+   <addaction name="menuTools"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
@@ -85,6 +92,11 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+I</string>
+   </property>
+  </action>
+  <action name="toolsMoveToOriginAction">
+   <property name="text">
+    <string>&amp;Move to origin</string>
    </property>
   </action>
  </widget>
