--- a/src/gui/CtrlCut.ui
+++ b/src/gui/CtrlCut.ui
@@ -22,7 +22,7 @@
      <number>0</number>
     </property>
     <item>
-     <widget class="NavigationView" name="graphicsView"/>
+     <widget class="CtrlCutView" name="graphicsView"/>
     </item>
    </layout>
   </widget>
@@ -50,8 +50,15 @@
     </property>
     <addaction name="toolsMoveToOriginAction"/>
    </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="helpAboutAction"/>
+   </widget>
    <addaction name="fileMenu"/>
    <addaction name="menuTools"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
@@ -99,12 +106,17 @@
     <string>&amp;Move to origin</string>
    </property>
   </action>
+  <action name="helpAboutAction">
+   <property name="text">
+    <string>About...</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>NavigationView</class>
+   <class>CtrlCutView</class>
    <extends>QGraphicsView</extends>
-   <header>NavigationView.h</header>
+   <header>CtrlCutView.h</header>
   </customwidget>
  </customwidgets>
  <resources>
