--- a/src/gui/CtrlCut.ui
+++ b/src/gui/CtrlCut.ui
@@ -32,7 +32,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>22</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="fileMenu">
@@ -49,6 +49,7 @@
      <string>Tools</string>
     </property>
     <addaction name="toolsMoveToOriginAction"/>
+    <addaction name="simulateAction"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -109,6 +110,11 @@
   <action name="helpAboutAction">
    <property name="text">
     <string>About...</string>
+   </property>
+  </action>
+  <action name="simulateAction">
+   <property name="text">
+    <string>Simulate</string>
    </property>
   </action>
  </widget>
