Compile fix: .h -> .hpp

--- a/src/gui/CtrlCut.ui
+++ b/src/gui/CtrlCut.ui
@@ -212,7 +212,7 @@
   <customwidget>
    <class>CtrlCutView</class>
    <extends>QGraphicsView</extends>
-   <header>CtrlCutView.h</header>
+   <header>CtrlCutView.hpp</header>
   </customwidget>
  </customwidgets>
  <resources>
