--- a/src/gui/CtrlCut.ui
+++ b/src/gui/CtrlCut.ui
@@ -108,6 +108,8 @@
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="newJobAction"/>
+    <addaction name="separator"/>
     <addaction name="fileOpenAction"/>
     <addaction name="fileImportAction"/>
     <addaction name="separator"/>
@@ -130,7 +132,6 @@
      <string>&amp;Edit</string>
     </property>
     <addaction name="deleteItem"/>
-    <addaction name="simplifyAction"/>
    </widget>
    <addaction name="fileMenu"/>
    <addaction name="editMenu"/>
@@ -162,7 +163,7 @@
      <normaloff>:/icons/fileopen.png</normaloff>:/icons/fileopen.png</iconset>
    </property>
    <property name="text">
-    <string>&amp;Open...</string>
+    <string>&amp;Open</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+O</string>
@@ -170,7 +171,7 @@
   </action>
   <action name="filePrintAction">
    <property name="text">
-    <string>&amp;Print...</string>
+    <string>&amp;Print</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+P</string>
@@ -207,6 +208,11 @@
     <string>Simplify</string>
    </property>
   </action>
+  <action name="newJobAction">
+   <property name="text">
+    <string>&amp;New</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
@@ -236,10 +242,10 @@
    </hints>
   </connection>
   <connection>
-   <sender>simplifyAction</sender>
+   <sender>newJobAction</sender>
    <signal>triggered()</signal>
    <receiver>MainWindow</receiver>
-   <slot>on_simplifyItem()</slot>
+   <slot>on_newJob()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>-1</x>
