--- a/src/gui/ctrl-cut.qrc
+++ b/src/gui/ctrl-cut.qrc
@@ -1,5 +1,8 @@
 <RCC>
   <qresource prefix="/">
+    <file>icons/fileimport.png</file>
+    <file>icons/filenew.png</file>
+    <file>icons/filesave.png</file>
     <file>icons/fileopen.png</file>
   </qresource>
 </RCC>
