--- a/src/gui/CtrlCut.ui
+++ b/src/gui/CtrlCut.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1045</width>
-    <height>730</height>
+    <width>691</width>
+    <height>615</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -54,7 +54,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1045</width>
+     <width>691</width>
      <height>22</height>
     </rect>
    </property>
@@ -74,7 +74,9 @@
     <property name="title">
      <string>&amp;Edit</string>
     </property>
-    <addaction name="editDeleteItemAction"/>
+    <addaction name="editCutAction"/>
+    <addaction name="editCopyAction"/>
+    <addaction name="editPasteAction"/>
    </widget>
    <widget class="QMenu" name="fileMenu">
     <property name="title">
@@ -542,12 +544,12 @@
     <string>About...</string>
    </property>
   </action>
-  <action name="editDeleteItemAction">
+  <action name="editCutAction">
    <property name="text">
-    <string>&amp;Delete</string>
+    <string>Cu&amp;t</string>
    </property>
    <property name="shortcut">
-    <string>Del</string>
+    <string>Ctrl+X</string>
    </property>
   </action>
   <action name="simplifyAction">
@@ -581,7 +583,7 @@
   </action>
   <action name="fileSaveAsAction">
    <property name="text">
-    <string>Save As...</string>
+    <string>Save &amp;As...</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+S</string>
@@ -596,6 +598,25 @@
    </property>
    <property name="text">
     <string>Show Properties</string>
+   </property>
+  </action>
+  <action name="editCopyAction">
+   <property name="text">
+    <string>&amp;Copy</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+C</string>
+   </property>
+  </action>
+  <action name="editPasteAction">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>&amp;Paste</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+V</string>
    </property>
   </action>
  </widget>
