--- a/src/gui/CtrlCut.ui
+++ b/src/gui/CtrlCut.ui
@@ -55,7 +55,7 @@
      <x>0</x>
      <y>0</y>
      <width>691</width>
-     <height>22</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuTools">
@@ -314,8 +314,11 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         <property name="maximumSize">
+          <size>
+           <width>50</width>
+           <height>16777215</height>
+          </size>
          </property>
          <property name="suffix">
           <string>%</string>
@@ -385,7 +388,7 @@
        <item row="5" column="1">
         <widget class="QComboBox" name="sort">
          <property name="currentIndex">
-          <number>1</number>
+          <number>0</number>
          </property>
          <property name="sizeAdjustPolicy">
           <enum>QComboBox::AdjustToContentsOnFirstShow</enum>
@@ -403,6 +406,11 @@
          <item>
           <property name="text">
            <string>Shortest Path</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>TSP</string>
           </property>
          </item>
         </widget>
