--- a/src/gui/CtrlCut.ui
+++ b/src/gui/CtrlCut.ui
@@ -154,6 +154,13 @@
       </layout>
      </item>
      <item>
+      <widget class="Line" name="line">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="0">
         <widget class="QLabel" name="xLabel">
@@ -534,6 +541,7 @@
     </layout>
     <zorder>verticalSpacer</zorder>
     <zorder>gridLayoutWidget</zorder>
+    <zorder>line</zorder>
    </widget>
   </widget>
   <action name="fileOpenAction">
